traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:14: error: value !=- is not a member of Int
  while (l!=-1){
          ^